--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -836,4 +836,5 @@
     <string name="ignore">忽略</string>
     <string name="loading">加载中</string>
     <string name="nomore">没有更多了</string>
+    <string name="facebook_app_id">1866682200216878</string>
 </resources>
